// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Choices Arrow controls 1`] = `
"[32m?[39m [32mWhat git command you want to run?[39m
  See current branch
[34m▇[39m [34mCheckout to master[39m
  See status"
`;

exports[`Choices Arrow controls 2`] = `
"[32m?[39m [32mWhat git command you want to run?[39m
  See current branch
  Checkout to master
[34m▇[39m [34mSee status[39m"
`;

exports[`Choices Arrow controls 3`] = `
"[32m?[39m [32mWhat git command you want to run?[39m
  See current branch
  Checkout to master
[34m▇[39m [34mSee status[39m"
`;

exports[`Choices Arrow controls 4`] = `
"[32m?[39m [32mWhat git command you want to run?[39m
  See current branch
[34m▇[39m [34mCheckout to master[39m
  See status"
`;

exports[`Choices Arrow controls 5`] = `
"[32m?[39m [32mWhat git command you want to run?[39m
[34m▇[39m [34mSee current branch[39m
  Checkout to master
  See status"
`;

exports[`Choices Arrow controls 6`] = `
"[32m?[39m [32mWhat git command you want to run?[39m
[34m▇[39m [34mSee current branch[39m
  Checkout to master
  See status"
`;

exports[`Choices Initial render 1`] = `
"[32m?[39m [32mWhat git command you want to run?[39m
[34m▇[39m [34mSee current branch[39m
  Checkout to master
  See status"
`;
